--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,6 @@ version = "0.1.0"
 authors = ["Tronje Krabbe <hi@tron.je>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 rand = "0.7"
-clap = { git = "https://github.com/clap-rs/clap.git" }
+clap = "3.0.0-beta.2"
