Change license to BSD Zero Clause
Due to the Unlicense likely not even being legal in Germany[1], switch
to the mostly equivalent BSD Zero Clause License. The new license does
not (attempt to) waive copyright, but otherwise provides the same
freedoms as before.

[1] See e.g.: https://softwareengineering.stackexchange.com/a/147120 and
following comments.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "spiceware"
 version = "1.1.0"
 authors = ["Tronje Krabbe <hi@tron.je>"]
 edition = "2021"
+license = "0BSD"
 
 [dependencies]
 rand = "0.8.5"
